--- a/experience_page/experience.html
+++ b/experience_page/experience.html
@@ -95,7 +95,7 @@
 							<div class="timeline_right">
 								<div class="margin-bottom-xlarge">
 									<div class="timeline_text">
-										Assisted in Douglas College's Astronomy laboratory by demonstrating the use of experimental instruments, supporting students in developing critical thinking and data analysis skills through math and visualization, and maintaining sensitive optical and electronic equipment according to departmental standarda.
+										Assisted in Douglas College's Astronomy laboratory by demonstrating the use of experimental instruments, supporting students in developing critical thinking and data analysis skills through math and visualization, and maintaining sensitive optical and electronic equipment according to departmental standards.
 									</div>
 								</div>
 								<div class="timeline_image-wrapper">
@@ -131,7 +131,7 @@
 							<div class="timeline_right">
 								<div class="margin-bottom-xlarge">
 									<div class="timeline_text">
-										At eNano Health, developed a genetic sequencing research protocol for micro-RNA in human saliva (up to 15 Gb data output), conduted clinical sample analysis using ELISA and LC-MS, and managed production, quality control, and inventory for saliva-based diagnostic products.
+										At eNano Health, developed a genetic sequencing research protocol for micro-RNA in human saliva (up to 15 Gb data output), conducted clinical sample analysis using ELISA and LC-MS, and managed production, quality control, and inventory for saliva-based diagnostic products.
 									</div>
 								</div>
 								<div class="timeline_image-wrapper">
