update networking project

--- a/networking_page/networking.html
+++ b/networking_page/networking.html
@@ -40,7 +40,9 @@
 		</div>
 
 		<div class="content">
-			<h2>No Content For Now.</h2>
+			<h2>1. Basic Setup</h2>
+			<img src="/pictures/mynetwork1.png">
+			<p>As an introduction to computer networking, this project focuses on configuring a simulated network environment. I set up and managed a variety of server types (DHCP, DNS, FTP, HTTP, Email, and IoT), each with its own IP address, subnet mask, and default gateway. This allowed me to gain practical experience with key networking services and protocols.</p>
 		</div>
 
 		<footer class="footer">
