--- a/youtube_page/youtube.html
+++ b/youtube_page/youtube.html
@@ -40,7 +40,10 @@
 		</div>
 
 		<div class="content">
-			<h2>No Content For Now.</h2>
+			<h2>1. Current Status</h2>
+			<img src="/pictures/youtube.png">
+			<p>There are currently eight videos on my YouTube channel, most of which cover undergraduate-level mathematics. These videos document my personal journey in learning higher-math, with each one building a solid foundation for the next. As this is a side project, the progress is steady but intentionally slow, reflecting a thoughtful and deliberate approach to learning.</p>
+			<p>Date: 31 May 2025</p>
 		</div>
 
 		<footer class="footer">
