update Physics Engine page

--- a/physicsengine_page/physicsengine.html
+++ b/physicsengine_page/physicsengine.html
@@ -40,7 +40,10 @@
 		</div>
 
 		<div class="content">
-			<h2>No Content For Now.</h2>
+			<h2>1. Single Particle Under Gravity</h2>
+			<video src="/videos/single_particle.mp4" type="video/mp4" autoplay muted loop></video>
+			<p>Every journey begins with something small, and I choose to start this project by simulating a single particle under Earth's gravity. Using the semi-implicit Euler method with a one-second time step, the simulation illustrates how the particle's position evolves over a 10-second period. The program is also capable of handling multiple particles by utilizing an array of pointers to store each particle's state - including its position, velocity, and mass.</p>
+			<p>Date: 31 May 2025</p>
 		</div>
 
 		<footer class="footer">
